# RK3588-NPU-Models

./: .cnb.yml  .gitignore  CLONE_GUIDE.md  CONDA_GUIDE.md  LICENSE  README.md  README_CN.md  clone_repos.sh  setup_conda_env.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Qwen3-Embedding-rk3588/: CMakeLists.txt  README.md  RUN_ON_RK3588.md  build.sh  setup.sh
Qwen3-Embedding-rk3588/scripts/: run.sh  test_batch.sh  test_eval.sh  test_single.sh
Qwen3-Embedding-rk3588/src/: main.cpp
Qwen3-Embedding-rk3588/test/: sentences.txt
Qwen3-Rerank-rk3588/: CMakeLists.txt  README.md  RUN_ON_RK3588.md  build.sh  log.txt  setup.sh
Qwen3-Rerank-rk3588/scripts/: run.sh  test_batch.sh  test_single.sh
Qwen3-Rerank-rk3588/src/: main.cpp
Qwen3-Rerank-rk3588/test/: documents.txt
Qwen3-VL-rk3588/: CMakeLists.txt  build.sh  setup.sh
Qwen3-VL-rk3588/include/: rknn_api.h
Qwen3-VL-rk3588/lib/aarch64/: .gitkeep
Qwen3-VL-rk3588/models/: .gitkeep
Qwen3-VL-rk3588/scripts/: run.sh
Qwen3-VL-rk3588/src/: image_enc.cc  image_enc.h  img_encoder.cpp
deepseek-ocr-rk3588/: CMakeLists.txt  README.md  build.sh  setup.sh
deepseek-ocr-rk3588/include/: rkllm.h
deepseek-ocr-rk3588/lib/: README.txt
deepseek-ocr-rk3588/models/: README.txt
deepseek-ocr-rk3588/scripts/: run.sh  test_multi.sh  test_single.sh
deepseek-ocr-rk3588/src/: main.cpp
internvl3-rk3588/: CMakeLists.txt  README.md  build.sh  setup.sh
internvl3-rk3588/scripts/: run.sh  test_multi.sh  test_single.sh
internvl3-rk3588/src/: image_enc.cc  main.cpp
mms_tts-rk3588/: .gitignore  README.md  RUN_ON_RK3588.md  clean.sh  prepare_models.sh  requirements-board.txt  requirements.txt  run.sh  setup.sh  setup_board.sh
mms_tts-rk3588/python/: convert_rknn.py  export_onnx.py  mms_tts.py
mms_tts-rk3588/scripts/: download_onnx.sh  test_batch.sh  test_multi.sh  test_single.sh
mms_tts-rk3588/test/: test_texts.txt  test_texts_zho.txt
mms_tts-rk3588/test/output/: README.md
ppocr-rk3588/: CMakeLists.txt  README.md  RUN_ON_RK3588.md  build.sh  clean.sh  copy_deps.sh  prepare_models.sh  run.sh  setup.sh
ppocr-rk3588/model/: ppocrv4_det_serverial.rknn
ppocr-rk3588/scripts/: test_multi.sh  test_single.sh
ppocr-rk3588/src/: dict.h  main.cpp  postprocess.cc  ppocr_system.cc  ppocr_system.h
qwen3-vl-rk3588/: README.md  RUN_ON_RK3588.md
qwen3-vl-rk3588/scripts/: test_multi.sh  test_single.sh
qwen3-vl-rk3588/src/: main.cpp
whisper-rk3588/: .gitignore  README.md  RUN_ON_RK3588.md  clean.sh  prepare_models.sh  requirements-board.txt  requirements.txt  setup_board.sh
whisper-rk3588/python/: convert_rknn.py  export_onnx.py  whisper.py
whisper-rk3588/scripts/: download_onnx.sh  fix_freq_rk3588.sh  test_multi.sh  test_single.sh
whisper-rk3588/test/audio/: README.md
